--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     />
 
     <title>Noodl Viewer</title>
-<base href="https://deniux.github.io/rivenoodl//" target="_blank" />
+<base href="https://deniux.github.io/portnoodl/" target="_blank" />
+<script src="https://unpkg.com/split-type"></script>
+<script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+<script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
 
 
     <style>
@@ -56,21 +59,20 @@
 
     <div id="root"></div>
 
-    <script src="https://deniux.github.io/rivenoodl//react.production.min.js"></script>
-    <script src="https://deniux.github.io/rivenoodl//react-dom.production.min.js"></script>
+    <script src="https://deniux.github.io/portnoodl/react.production.min.js"></script>
+    <script src="https://deniux.github.io/portnoodl/react-dom.production.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-    <script src="https://deniux.github.io/rivenoodl//index-e04ee220af77e049.js"></script>
+    <script src="https://deniux.github.io/portnoodl/index-abd40571b092e040.js"></script>
 <script>
 (function () {
-  Noodl.Env['BaseUrl'] = 'https://deniux.github.io/rivenoodl//';
+  Noodl.Env['BaseUrl'] = 'https://deniux.github.io/portnoodl/';
 })();
 </script>
 
-    <script type="text/javascript" src="https://deniux.github.io/rivenoodl//noodl_modules/noodl-lottie/index.js"></script>
+    
 
-
-    <script src="https://deniux.github.io/rivenoodl//noodl.deploy.js"></script>
+    <script src="https://deniux.github.io/portnoodl/noodl.deploy.js"></script>
     <script type="application/javascript">
       document.addEventListener("DOMContentLoaded", function () {
         const root = document.getElementById("root");
