--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       content="black-translucent"
     />
 
-    <title>Noodl Viewer</title>
-<base href="https://deniux.github.io/portnoodl/" target="_blank" />
+    <title>deniskhramov</title>
+<base href="https://deniskhramov.com/" target="_blank" />
 <script src="https://unpkg.com/split-type"></script>
 <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
 <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
@@ -59,20 +59,20 @@
 
     <div id="root"></div>
 
-    <script src="https://deniux.github.io/portnoodl/react.production.min.js"></script>
-    <script src="https://deniux.github.io/portnoodl/react-dom.production.min.js"></script>
+    <script src="https://deniskhramov.com/react.production.min.js"></script>
+    <script src="https://deniskhramov.com/react-dom.production.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-    <script src="https://deniux.github.io/portnoodl/index-abd40571b092e040.js"></script>
+    <script src="https://deniskhramov.com/index-756f696cc03e44a9.js"></script>
 <script>
 (function () {
-  Noodl.Env['BaseUrl'] = 'https://deniux.github.io/portnoodl/';
+  Noodl.Env['BaseUrl'] = 'https://deniskhramov.com/';
 })();
 </script>
 
     
 
-    <script src="https://deniux.github.io/portnoodl/noodl.deploy.js"></script>
+    <script src="https://deniskhramov.com/noodl.deploy.js"></script>
     <script type="application/javascript">
       document.addEventListener("DOMContentLoaded", function () {
         const root = document.getElementById("root");
