--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
 
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
     <style>
       body {
         margin: 0;
@@ -63,7 +66,7 @@
     <script src="https://deniux.github.io/portnoodl/react-dom.production.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-    <script src="https://deniux.github.io/portnoodl/index-4e9d1acfb4bc94fd.js"></script>
+    <script src="https://deniux.github.io/portnoodl/index-4e0bed13059498e9.js"></script>
 <script>
 (function () {
   Noodl.Env['BaseUrl'] = 'https://deniux.github.io/portnoodl/';
