--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script src="https://unpkg.com/split-type"></script>
 <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
 <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+<script src="https://unpkg.com/lenis@1.3.8/dist/lenis.min.js"></script> 
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -66,7 +67,7 @@
     <script src="https://deniux.github.io/portnoodl/react-dom.production.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-    <script src="https://deniux.github.io/portnoodl/index-bb620dd9e568317b.js"></script>
+    <script src="https://deniux.github.io/portnoodl/index-7aaa649699d05d5c.js"></script>
 <script>
 (function () {
   Noodl.Env['BaseUrl'] = 'https://deniux.github.io/portnoodl/';
