--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
+
+
+<link rel="stylesheet" href="lightgallery/css/lightgallery-bundle.min.css">
+<script src="lightgallery/lightgallery.min.js"></script>
+
     <style>
       body {
         margin: 0;
@@ -67,7 +72,7 @@
     <script src="https://deniux.github.io/portnoodl/react-dom.production.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-    <script src="https://deniux.github.io/portnoodl/index-66ccb9a0c75c6f40.js"></script>
+    <script src="https://deniux.github.io/portnoodl/index-c646302d6489e315.js"></script>
 <script>
 (function () {
   Noodl.Env['BaseUrl'] = 'https://deniux.github.io/portnoodl/';
