--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <link rel="stylesheet" href="lightgallery/css/lightgallery-bundle.min.css">
 <script src="lightgallery/lightgallery.min.js"></script>
 
+<base href="/REPO/">
 
     <style>
       body {
