--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
 <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
 <script src="https://unpkg.com/lenis@1.3.8/dist/lenis.min.js"></script> 
+<link rel="stylesheet" href="https://unpkg.com/lenis@1.3.11/dist/lenis.css">
+
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,10 +24,7 @@
 
 
 
-<link rel="stylesheet" href="lightgallery/css/lightgallery-bundle.min.css">
-<script src="lightgallery/lightgallery.min.js"></script>
 
-<base href="/REPO/">
 
     <style>
       body {
@@ -74,7 +73,7 @@
     <script src="https://deniux.github.io/portnoodl/react-dom.production.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-    <script src="https://deniux.github.io/portnoodl/index-f01af8aae4d25393.js"></script>
+    <script src="https://deniux.github.io/portnoodl/index-36401c941496a07d.js"></script>
 <script>
 (function () {
   Noodl.Env['BaseUrl'] = 'https://deniux.github.io/portnoodl/';
