--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
 <script src="https://unpkg.com/split-type"></script>
 <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
 <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
-<script src="https://unpkg.com/lenis@1.3.8/dist/lenis.min.js"></script> 
-<link rel="stylesheet" href="https://unpkg.com/lenis@1.3.11/dist/lenis.css">
+
+<script src="https://unpkg.com/lenis@1.3.13/dist/lenis.min.js"></script> 
+<link rel="stylesheet" href="https://unpkg.com/lenis@1.3.13/dist/lenis.css">
+
+<script src="https://cdn.jsdelivr.net/npm/smooth-scrollbar@8.8.4/dist/smooth-scrollbar.js"></script>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.css" />
+<script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
+
 
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
+
+
 
 
 
@@ -73,7 +85,7 @@
     <script src="https://deniux.github.io/portnoodl/react-dom.production.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-    <script src="https://deniux.github.io/portnoodl/index-36401c941496a07d.js"></script>
+    <script src="https://deniux.github.io/portnoodl/index-88211dfaf78739ca.js"></script>
 <script>
 (function () {
   Noodl.Env['BaseUrl'] = 'https://deniux.github.io/portnoodl/';
