--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
 
     <title>deniskhramov</title>
-<base href="https://deniux.github.io/portnoodl/" target="_blank" />
+<base href="https://deniskhramov.com/" target="_blank" />
 <script src="https://unpkg.com/split-type"></script>
 <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
 <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
@@ -81,20 +81,20 @@
 
     <div id="root"></div>
 
-    <script src="https://deniux.github.io/portnoodl/react.production.min.js"></script>
-    <script src="https://deniux.github.io/portnoodl/react-dom.production.min.js"></script>
+    <script src="https://deniskhramov.com/react.production.min.js"></script>
+    <script src="https://deniskhramov.com/react-dom.production.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-    <script src="https://deniux.github.io/portnoodl/index-0c3abef94d417d25.js"></script>
+    <script src="https://deniskhramov.com/index-e9cd1c3165e86f75.js"></script>
 <script>
 (function () {
-  Noodl.Env['BaseUrl'] = 'https://deniux.github.io/portnoodl/';
+  Noodl.Env['BaseUrl'] = 'https://deniskhramov.com/';
 })();
 </script>
 
     
 
-    <script src="https://deniux.github.io/portnoodl/noodl.deploy.js"></script>
+    <script src="https://deniskhramov.com/noodl.deploy.js"></script>
     <script type="application/javascript">
       document.addEventListener("DOMContentLoaded", function () {
         const root = document.getElementById("root");
